--- a/styles/architect.css
+++ b/styles/architect.css
@@ -4,11 +4,20 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 );
     
- 
+/* shared style */ 
 *{
     font-family: 'Montserrat', sans-serif;
     font-family: 'Ubuntu', sans-serif;
     font-family: 'Work Sans', sans-serif;
+}
+.btn-primary{
+    border-radius: 8px;
+    color: #fff;
+    font-size: 1.25rem;
+    background: #ff900e;
+    padding: 20px 25px;
+    cursor: pointer;
+    border: 0;
 }
 
 /* header styles */
@@ -55,4 +64,34 @@ nav li a{
     font-size: 4rem;
     font-weight: 700;
     color: #131313;
+}
+
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+
+/* responsive media queries */
+/* mobile devices */
+@media screen and (max-width:576px){
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+
+    }
+    
+}
+
+/* tablet devices */
+@media screen and (min-width:576px) and (max-width:960px){
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+
+    }
+    
 }
