--- a/styles/architect.css
+++ b/styles/architect.css
@@ -10,6 +10,10 @@
     font-family: 'Ubuntu', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
+
+.text-light-gray{
+    color: #424242;
+}
 .btn-primary{
     border-radius: 8px;
     color: #fff;
@@ -20,6 +24,12 @@
     border: 0;
 }
 
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
+    
 /* header styles */
 header{
     background: rgba(255, 144, 14, 0.10);
@@ -71,6 +81,39 @@ nav li a{
     width: 100%;
 }
 
+/* main styles*/
+main{
+    max-width: 1440px;
+    margin: 70px auto;
+}
+/* teams styles */
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.teams-title{
+    font-size: 2.8rem;
+}
+.teams-title .quick-list{
+    color: #727272;
+    font-weight: 700;
+}
+.teams-title .text-features{
+    color: #FF900E;
+    font-weight: 700;
+}
+
+
+
 /* responsive media queries */
 /* mobile devices */
 @media screen and (max-width:576px){
@@ -96,32 +139,5 @@ nav li a{
     
 }
 
-main{
-    max-width: 1440px;
-    margin: 0 auto;
-}
-.teams-container{
-    display: flex;
-    align-items: center;
-}
-.teams-img-container{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1.5rem;
-}
-.teams-content{
-    padding-left: 70px;
-    padding-right: 70px;
-}
-.teams-title{
-    font-size: 2.8rem;
-}
-.teams-title .quick-list{
-    color: #727272;
-    font-weight: 700;
-}
-.teams-title .text-features{
-    color: #FF900E;
-    font-weight: 700;
-}
+
 
