--- a/styles/architect.css
+++ b/styles/architect.css
@@ -29,7 +29,7 @@
     font-weight: 700;
     color: #131313;
 }
-    
+
 /* header styles */
 header{
     background: rgba(255, 144, 14, 0.10);
@@ -111,6 +111,36 @@ main{
     color: #FF900E;
     font-weight: 700;
 }
+
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+/* facts section*/
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #ff900e;
+    text-align: center;
+    padding: 30px;
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-weight: 1.25rem;
+
+}
+
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+
+
+
+
 
 
 
