--- a/styles/architect.css
+++ b/styles/architect.css
@@ -112,6 +112,47 @@ main{
     font-weight: 700;
 }
 
+/* feature section style */
+.features{
+    margin-top: 50px;
+    display: flex;
+    gap: 100px;
+}
+.features .section-title{
+    border-left: 5px solis #FF900E;
+    padding-left: 20px;
+}
+
+.feature-content .card{
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.feature-img img{
+    height: 90%;
+    margin-left: 90px;
+}
+
+.ten-years-badge{
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 340px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+}
+.ten-years-badge h2{
+    font-size: 4rem;
+    margin: 0;
+} 
+.ten-years-badge p{
+    font-size: 1.5rem;
+}   
+
 .facts-card-container{
     display: flex;
     justify-content: space-around;
